--- a/view/adminhtml/layout/resetuibookmarks_reset_index.xml
+++ b/view/adminhtml/layout/resetuibookmarks_reset_index.xml
@@ -1,4 +1,5 @@
-<?php
+<?xml version="1.0"?>
+<!--
 /**
  * Magenizr ResetUiBookmarks
  *
@@ -7,9 +8,6 @@
  * @copyright   Copyright (c) 2018 Magenizr (http://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
+-->
 
-\Magento\Framework\Component\ComponentRegistrar::register(
-    \Magento\Framework\Component\ComponentRegistrar::MODULE,
-    'Magenizr_ResetUiBookmarks',
-    __DIR__
-);
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" />
