--- a/view/adminhtml/layout/adminhtml_system_account_index.xml
+++ b/view/adminhtml/layout/adminhtml_system_account_index.xml
@@ -5,7 +5,7 @@
  *
  * @category    Magenizr
  * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 -->
