--- a/view/adminhtml/templates/system/account/resetuibookmarks.phtml
+++ b/view/adminhtml/templates/system/account/resetuibookmarks.phtml
@@ -4,7 +4,7 @@
  *
  * @category    Magenizr
  * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 -->
@@ -19,9 +19,21 @@
         <div class="admin__field">
             <label class="label admin__field-label"></label>
             <div class="admin__field-control control">
-                <a href="<?= $block->escapeUrl($block->getUrl('magenizr_resetuibookmarks/reset/index', ['_current' => true, '_use_rewrite' => true])) ?>" class="action-default scalable button-danger">
-                    <span><?= $block->escapeHtml(__('Reset UI Bookmarks')) ?></span>
-                </a>
+
+                <form action="<?= $block->escapeUrl($block->getUrl('magenizr_resetuibookmarks/reset/index', ['_current' => true, '_use_rewrite' => true])) ?>" method="get">
+
+                    <button id="save" title="Save Account" type="submit" class="action-default scalable button-danger" role="button" aria-disabled="false">
+                        <span><?= $block->escapeHtml(__('Reset UI Bookmarks')) ?></span>
+                    </button>
+
+                    <select id="identifier" name="identifier" title="Identifier" class="select select admin__control-select">
+                        <option value="all"><?= $block->escapeHtml(__('All Bookmarks')) ?></option>
+                        <option value="saved-only"><?= $block->escapeHtml(__('Saved Filters Only')) ?></option>
+                        <option value="saved-exclude"><?= $block->escapeHtml(__('Keep Saved Filters')) ?></option>
+                    </select>
+
+                </form>
+
                 <span class="hint">
                     <?= $block->escapeHtml(__('This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.')) ?>
                 </span>
