--- a/view/adminhtml/web/css/style.less
+++ b/view/adminhtml/web/css/style.less
@@ -3,7 +3,7 @@
  *
  * @category    Magenizr
  * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 @divider: #e3e3e3;
@@ -37,5 +37,9 @@
             background: @button-background-color-hover;
             border-color: @button-border-color-hover;
         }
+    }
+
+    select {
+        margin-left: 0.5em;
     }
 }
