--- a/view/adminhtml/layout/adminhtml_system_account_index.xml
+++ b/view/adminhtml/layout/adminhtml_system_account_index.xml
@@ -2,22 +2,23 @@
 <!--
 /**
  * Magenizr ResetUiBookmarks
- *
- * @category    Magenizr
- * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2022 Magenizr (https://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 -->
 
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <css src="Magenizr_ResetUiBookmarks::css/style.css"/>
     </head>
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Backend\Block\System\Account\Edit" name="adminhtml.system.account.edit"/>
-            <block class="Magento\Framework\View\Element\Template" name="magenizr.resetuibookmarks.adminhtml.system.account.edit" template="Magenizr_ResetUiBookmarks::system/account/resetuibookmarks.phtml"/>
+            <block class="Magento\Backend\Block\System\Account\Edit"
+                   name="adminhtml.system.account.edit"/>
+            <block class="Magento\Framework\View\Element\Template"
+                   name="magenizr.resetuibookmarks.adminhtml.system.account.edit"
+                   template="Magenizr_ResetUiBookmarks::system/account/resetuibookmarks.phtml"/>
         </referenceContainer>
     </body>
 </page>
