--- a/view/adminhtml/layout/magenizr_resetuibookmarks_reset_index.xml
+++ b/view/adminhtml/layout/magenizr_resetuibookmarks_reset_index.xml
@@ -2,12 +2,10 @@
 <!--
 /**
  * Magenizr ResetUiBookmarks
- *
- * @category    Magenizr
- * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2022 Magenizr (https://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 -->
 
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" />
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" />
