--- a/view/adminhtml/web/css/style.less
+++ b/view/adminhtml/web/css/style.less
@@ -1,13 +1,10 @@
 /**
  * Magenizr ResetUiBookmarks
- *
- * @category    Magenizr
- * @package     Magenizr_ResetUiBookmarks
- * @copyright   Copyright (c) 2018 - 2021 Magenizr (http://www.magenizr.com)
+ * @copyright   Copyright (c) 2018 - 2022 Magenizr (https://www.magenizr.com)
  * @license     http://opensource.org/licenses/osl-3.0.php Open Software License (OSL 3.0)
  */
 @divider: #e3e3e3;
-@button-color: #ffffff;
+@button-color: #fff;
 @button-background-color: #eb5202;
 @button-border-color: #eb5202;
 @button-background-color-hover: #ba4000;
@@ -21,8 +18,8 @@
     }
 
     .divider {
-        height: 1px;
         background: @divider;
+        height: 1px;
         margin: 20px 0;
     }
 
@@ -30,8 +27,8 @@
         background: @button-background-color;
         border-color: @button-border-color;
         color: @button-color;
-        text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
         text-decoration: none;
+        text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
 
         &:hover, &:active, &:focus {
             background: @button-background-color-hover;
