--- a/view/adminhtml/web/css/style.less
+++ b/view/adminhtml/web/css/style.less
@@ -40,3 +40,26 @@
         margin-left: 0.5em;
     }
 }
+
+#reset_ui_bookmarks {
+
+    .divider {
+        display: none;
+    }
+
+    .hide {
+        display: none !important;
+    }
+
+    .ml0 {
+        margin-left: 0 !important;
+    }
+
+    .w100 {
+        width: 100% !important;
+    }
+
+    .admin__field {
+        margin-left: 0 !important;
+    }
+}
