--- a/view/adminhtml/templates/system/account/resetuibookmarks.phtml
+++ b/view/adminhtml/templates/system/account/resetuibookmarks.phtml
@@ -9,30 +9,37 @@
 <div class="magenizr-resetuibookmarks">
     <div class="divider"></div>
     <fieldset class="fieldset admin__fieldset " id="magenizr_resetuibookmarks">
-        <legend class="admin__legend">
+
+        <legend class="admin__legend hide">
             <span><?= $escaper->escapeHtml(__('Reset UI Bookmarks')) ?></span>
         </legend><br>
 
         <div class="admin__field">
-            <label class="label admin__field-label"></label>
-            <div class="admin__field-control control">
 
-                <form action="<?= $escaper->escapeUrl($block->getUrl('magenizr_resetuibookmarks/reset/index', ['_current' => true, '_use_rewrite' => true])) ?>" method="get">
+            <label class="label admin__field-label hide"></label>
+
+            <div class="admin__field-control control ml0 w100">
+
+                <form action="<?= $escaper->escapeUrl($block->getUrl(
+                    'magenizr_resetuibookmarks/reset/index',
+                    ['_current' => true, '_use_rewrite' => true]
+                )) ?>" method="get">
 
                     <button id="save" title="Save Account" type="submit" class="action-default scalable button-danger" role="button" aria-disabled="false">
                         <span><?= $escaper->escapeHtml(__('Reset UI Bookmarks')) ?></span>
                     </button>
 
-                    <select id="identifier" name="identifier" title="Identifier" class="select select admin__control-select">
+                    <select id="identifier" name="magenizr_resetuibookmarks[identifier]" title="Identifier" class="select select admin__control-select">
                         <option value="saved-exclude"><?= $escaper->escapeHtml(__('Keep Saved Filters')) ?></option>
                         <option value="saved-only"><?= $escaper->escapeHtml(__('Saved Filters Only')) ?></option>
                         <option value="all"><?= $escaper->escapeHtml(__('All Bookmarks')) ?></option>
                     </select>
 
+                    <input type="hidden" name="magenizr_resetuibookmarks[userId]" value="<?= $escaper->escapeHtml($block->getData('userId')); ?>" />
                 </form>
 
                 <span class="hint">
-                    <?= $escaper->escapeHtml(__('This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.')) ?>
+                    <?= $escaper->escapeHtml(__('This will reset UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.')) ?>
                 </span>
             </div>
         </div>
