--- a/view/adminhtml/templates/system/account/resetuibookmarks.phtml
+++ b/view/adminhtml/templates/system/account/resetuibookmarks.phtml
@@ -25,17 +25,17 @@
                     ['_current' => true, '_use_rewrite' => true]
                 )) ?>" method="get">
 
-                    <button id="save" title="Save Account" type="submit" class="action-default scalable button-danger" role="button" aria-disabled="false">
+                    <button id="reset" title="Reset UI Bookmarks" type="submit" class="action-default scalable button-danger" role="button" aria-disabled="false">
                         <span><?= $escaper->escapeHtml(__('Reset UI Bookmarks')) ?></span>
                     </button>
 
-                    <select id="identifier" name="magenizr_resetuibookmarks[identifier]" title="Identifier" class="select select admin__control-select">
+                    <select id="identifier" name="magenizr_resetuibookmarks[identifier]" title="Identifier" class="select select admin__control-select ignore-validate">
                         <option value="saved-exclude"><?= $escaper->escapeHtml(__('Keep Saved Filters')) ?></option>
                         <option value="saved-only"><?= $escaper->escapeHtml(__('Saved Filters Only')) ?></option>
                         <option value="all"><?= $escaper->escapeHtml(__('All Bookmarks')) ?></option>
                     </select>
 
-                    <input type="hidden" name="magenizr_resetuibookmarks[userId]" value="<?= $escaper->escapeHtml($block->getData('userId')); ?>" />
+                    <input type="hidden" name="magenizr_resetuibookmarks[userId]" value="<?= $escaper->escapeHtml($block->getData('userId')); ?>" class="ignore-validate" />
                 </form>
 
                 <span class="hint">
