--- a/view/adminhtml/web/css/style.less
+++ b/view/adminhtml/web/css/style.less
@@ -36,8 +36,20 @@
         }
     }
 
+    .label {
+        text-align: left;
+        font-weight: bold;
+        width: 25%;
+        display: block;
+        float: left;
+    }
+
+    .row {
+        margin-bottom: 15px;
+    }
+
     select {
-        margin-left: 0.5em;
+        margin: 0;
     }
 }
 
